--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
 <body>
     <div id="container">
         <div><button type="button" id="b1">b1</button></div>
-        <div><button>b2</button></div>
+        <div><button type="button" id="b2">b2</button></div>
     </div>
     <script src="./js/jsfunction.js"></script>
 </body>
