--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,8 @@
            
         }
         #container {
-            width: 300px;
-            height: 500px;
+            width: 200px;
+            height: 300px;
             resize: none;
         }
     </style>
@@ -20,7 +20,8 @@
     <div id="container">
         <div><button type="button" id="b1">b1</button></div>
         <div><button type="button" id="b2">b2</button></div>
+		<div><button type="button" id="return">return</button></div>
     </div>
-    <script src="./js/jsfunction.js"></script>
+    <script src="./js/popup.js"></script>
 </body>
 </html>
