--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,7 @@
         <div><button type="button" id="b2">b2</button></div>
 		<div><button type="button" id="return">return</button></div>
     </div>
+	<p id="msg">wait for msg</p>
     <script src="./js/popup.js"></script>
 </body>
 </html>
