--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
             resize: none;
         }
     </style>
-    
+    <link rel="stylesheet" href="./css/popstyle.css">
     <title></title>
 </head>
 <body>
