--- a/popup.html
+++ b/popup.html
@@ -3,26 +3,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <style>
-        body {
-           
-        }
-        #container {
-            width: 200px;
-            height: 300px;
-            resize: none;
-        }
-    </style>
     <link rel="stylesheet" href="./css/popstyle.css">
     <title></title>
 </head>
 <body>
     <div id="container">
-        <div><button type="button" id="b1">b1</button></div>
-        <div><button type="button" id="b2">b2</button></div>
-		<div><button type="button" id="return">return</button></div>
+        <div><button type="button" id="b1" >Try Full</button></div>
+        <div><button type="button" id="b2">DnVod</button></div>
+        <p id="warning">Use this on some webstie may repaly ad.</p>
+        <p id="msg">wait for msg</p>
     </div>
-	<p id="msg">wait for msg</p>
+    
     <script src="./js/popup.js"></script>
 </body>
 </html>
