--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <div id="container">
-        <div><button type="button" id="b1" >Try Full</button></div>
+        <div><button type="button" id="b1">Try Full</button></div>
         <div><button type="button" id="b2">DnVod</button></div>
+        <!-- <div>
+         <button type="button" id="jump_30" class="jumpBtn">30</button>
+         <button type="button" id="jump_60"class="jumpBtn">60</button>
+         <button type="button" id="jump_90"class="jumpBtn">90</button>
+     </div>-->
         <p id="warning">Use this on some webstie may repaly ad.</p>
         <p id="msg">wait for msg</p>
     </div>
